Wrap and Dropdown fix
Site Main Wrapper and Desktop Dropdown Icon fix

--- a/assets/sass/files/nav.scss
+++ b/assets/sass/files/nav.scss
@@ -113,6 +113,7 @@
 					transform: rotate(45deg);
 					cursor: pointer;
 					transition: var(--st);
+					pointer-events: none;
 					svg {
 					stroke: var(--color-1);
 					}
